syntax = "proto3";

package pb;

option go_package = "github.com/NordSecurity/nordvpn-linux/daemon/pb";

import "config/protocol.proto";

message CitiesRequest {
  string country = 1;
}
